# m0_clipper

./: ANIMATIONS.md  ARCHITECTURE_ASSESSMENT.md  CLIPPING_INTELLIGENCE.md  GLASSMORPHISM_GUIDE.md  GUI_ARCHITECTURE.md  GUI_README.md  LICENSE  PERFORMANCE_IMPROVEMENTS.md  PROJECT_IMPROVEMENTS.md  README.md  TRANSFORMATION_COMPLETE.md  WINDOWS_BUILD_FIX.md  WINDOWS_SETUP.md  build_exe.bat  build_exe.py  diagnostic.py  gui_demo.py  launch_gui.py  m0_clipper.spec  package-lock.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  test_animations.py  test_gui.py
highlighter/: __init__.py  __version__.py  analyzer.py  animations.py  cyber_effects.py  glassmorphism.py  gui.py  gui_bridge.py  gui_legacy.py  processor.py  window_effects.py
highlighter/core/: __init__.py  error_handler.py  exceptions.py  logging_config.py  validation.py
highlighter/gui/: __init__.py  main_window.py
highlighter/gui/components/: __init__.py  base_component.py  control_panel.py  settings_panel.py  status_display.py  video_input.py
highlighter/gui/services/: __init__.py  analysis_service.py  notification_service.py
highlighter/gui/state/: __init__.py  app_state.py
tests/: test_animations.py  test_gui.py
tools/: performance_test.py
