# Development Configuration for M0 Clipper
# This file configures development tools and quality standards

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "tkinterdnd2.*",
    "rich.*",
    "loguru.*",
    "ffmpeg.*",
    "soundfile.*"
]
ignore_missing_imports = true

[tool.pylint.master]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle"
]

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-locals", 
    "too-many-branches",
    "too-many-statements",
    "too-few-public-methods",
    "import-error"  # Handled by mypy
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI",
    "ffmpeg: marks tests that require FFmpeg"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m0-clipper"
version = "0.3.0"
description = "AI-powered automatic highlight clip generator for gaming videos and streams"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "cvrdincake"}
]
keywords = ["video", "highlights", "gaming", "clips", "editing", "twitch", "youtube", "vod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.2.post1",
    "loguru>=0.7.2",
    "numpy>=2.0.2",
    "rich>=13.9.3",
    "scikit-learn>=1.5.2",
    "typer>=0.12.5",
    "tkinterdnd2>=0.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.991",
]

build = [
    "pyinstaller>=5.0"
]

[project.scripts]
m0-clipper = "highlighter.__main__:main"
m0-clipper-gui = "highlighter.gui:main"

[project.urls]
Homepage = "https://github.com/cvrdincake/m0_clipper"
Repository = "https://github.com/cvrdincake/m0_clipper.git"
Issues = "https://github.com/cvrdincake/m0_clipper/issues"
